<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ParkMeActivity">

    <TextView
        android:id="@+id/longiVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/ubuntu_mono_bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/whitePrime"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longi" />

    <TextView
        android:id="@+id/pleaseClickMeToOpenInMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="45dp"
        android:text="@string/pleaseClickMeToOpenInMap"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/bluePrime"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longiVal" />

    <TextView
        android:id="@+id/pleaseGiveFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/pleaseGiveFeedBack"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/redPrime"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/feedback"
        app:layout_constraintEnd_toEndOf="@+id/pleaseClickMeToOpenInMap"
        app:layout_constraintStart_toStartOf="@+id/pleaseClickMeToOpenInMap"
        app:layout_constraintTop_toBottomOf="@+id/pleaseClickMeToOpenInMap"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/rounded_cornors"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/feedback"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/yellowPrime"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <ImageView
        android:id="@+id/parkImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/parkMe"
        app:layout_constraintBottom_toTopOf="@+id/parkMeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/parking" />

    <TextView
        android:id="@+id/longi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_mono_bold"
        android:text="@string/longitude"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/yellowPrime"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/longiVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/latiVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_mono_bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/whitePrime"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/longi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/ubuntu_mono_bold"
        android:text="@string/latitude"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/yellowPrime"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/latiVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/parkMeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_mono_bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/whitePrime"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/parkMeText"
        app:layout_constraintBottom_toTopOf="@+id/lati"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>