<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sharped_cornors">

            <TextView
                android:id="@+id/latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/ubuntu_mono_bold"
                android:text="@string/dummyString"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/placeLocationBtn"
                app:layout_constraintStart_toStartOf="@+id/latitudeName"
                app:layout_constraintTop_toBottomOf="@+id/latitudeName" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/ubuntu_mono_bold"
                android:text="@string/dummyString"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/placeResponceBtn"
                app:layout_constraintStart_toStartOf="@+id/longitudeName"
                app:layout_constraintTop_toBottomOf="@+id/longitudeName" />

            <TextView
                android:id="@+id/descripition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/ubuntu_mono_bold"
                android:textColor="@color/yellowPrime"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/latitudeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/ubuntu_mono_bold"
                android:textColor="@color/yellowPrime"
                android:textSize="16sp"
                android:text="@string/latitude"
                app:layout_constraintBottom_toTopOf="@+id/latitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/longitudeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ubuntu_mono_bold"
                android:textColor="@color/yellowPrime"
                android:textSize="16sp"
                android:text="@string/longitude"
                app:layout_constraintStart_toStartOf="@+id/latitude"
                app:layout_constraintTop_toBottomOf="@+id/latitude" />

            <ImageView
                android:id="@+id/placeResponceBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/dummyString"
                app:layout_constraintBottom_toBottomOf="@+id/longitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/longitude"
                app:srcCompat="@drawable/rating_small" />

            <ImageView
                android:id="@+id/placeLocationBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/dummyString"
                app:layout_constraintBottom_toBottomOf="@+id/latitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/latitude"
                app:srcCompat="@drawable/pin_small" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:clickable="false"
                android:numStars="5"
                android:theme="@style/RatingBar"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/descripition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longitude" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>